--- a/software/ros_packages/nav_autonomy/package.xml
+++ b/software/ros_packages/nav_autonomy/package.xml
@@ -7,6 +7,7 @@
   <maintainer email="jagelsky@oregonstate.edu">Nav Autonomy Capstone</maintainer>
   <license>TODO: License</license>
 
+  <depend>rtabmap_ros</depend>
   <exec_depend>ros2launch</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
