--- a/software/ros_packages/nav_autonomy/config/nav2_params.yaml
+++ b/software/ros_packages/nav_autonomy/config/nav2_params.yaml
@@ -1,4 +1,3 @@
-# rtabmap_demos: We add segmented ground and obstacles to voxel_layer of the local costmap and removed scan source.
 bt_navigator:
   ros__parameters:
     use_sim_time: False
@@ -72,6 +71,7 @@ bt_navigator_navigate_to_pose_rclcpp_node:
 controller_server:
   ros__parameters:
     use_sim_time: False
+    odom_topic: "odom"
     controller_frequency: 20.0
     min_x_velocity_threshold: 0.001
     min_y_velocity_threshold: 0.5
