Adjust velocity and acceleration parameters in nav2_params.yaml
Reduced maximum and minimum velocities and acceleration limits on rotation.

--- a/software/ros_packages/nav_autonomy/config/nav2_params.yaml
+++ b/software/ros_packages/nav_autonomy/config/nav2_params.yaml
@@ -109,17 +109,17 @@ controller_server:
       min_vel_y: 0.0
       max_vel_x: 0.5
       max_vel_y: 0.0
-      max_vel_theta: 0.5
+      max_vel_theta: 0.2 #rads/s
       min_speed_xy: 0.0
       max_speed_xy: 0.8
       min_speed_theta: 0.1
       # Acceleration
       acc_lim_x: 0.5
       acc_lim_y: 0.0
-      acc_lim_theta: 0.3
+      acc_lim_theta: 0.15
       decel_lim_x: -0.5
       decel_lim_y: 0.0
-      decel_lim_theta: -0.3
+      decel_lim_theta: -0.15
       # Trajectory
       vx_samples: 15
       vy_samples: 1
@@ -290,10 +290,10 @@ velocity_smoother:
     smoothing_frequency: 20.0
     scale_velocities: False
     feedback: "OPEN_LOOP"
-    max_velocity: [0.5, 0.0, 0.5]
-    min_velocity: [-0.5, 0.0, -0.5]
-    max_accel: [0.5, 0.0, 0.3]
-    max_decel: [-0.5, 0.0, -0.3]
+    max_velocity: [0.5, 0.0, 0.2]  # forward, strafe, rotation
+    min_velocity: [-0.5, 0.0, -0.2] # backward, strafe, rotation
+    max_accel: [0.5, 0.0, 0.15]
+    max_decel: [-0.5, 0.0, -0.15]
     odom_topic: "odom"
     odom_duration: 0.1
     deadband_velocity: [0.0, 0.0, 0.0]
