--- a/software/ros_packages/comms_control/comms_control/comms_monitor.cfg
+++ b/software/ros_packages/comms_control/comms_control/comms_monitor.cfg
@@ -1,6 +1,6 @@
 logging_period = 5.0
 logging_enabled = true
-logging_path = ~/comms_logs/
+logging_path = ./comms_logs/
 
 device_name = halow
     ip = 10.42.0.1
