More updates to comms_monitor

--- a/software/ros_packages/comms_control/comms_control/comms_monitor.example.cfg
+++ b/software/ros_packages/comms_control/comms_control/comms_monitor.example.cfg
@@ -1,4 +1,5 @@
-logging_period = 5.0          # how often logging occurs in seconds
+logging_period = 5.0          # how often logging occurs in seconds (should not be less than update_period)
+update_period = 5.0           # how often status data is updated in seconds
 logging_enabled = true        # whether or not logging begins as soon as the node is created (logging can be started or stopped later(WIP))
 logging_path = ~/comms_logs/  # path to store log files in
 
