--- a/software/ros_packages/comms_control/comms_control/comms_monitor.cfg
+++ b/software/ros_packages/comms_control/comms_control/comms_monitor.cfg
@@ -2,9 +2,14 @@ logging_period = 5.0
 logging_enabled = true
 logging_path = ./comms_logs/
 
-device_name = halow
-    ip = 10.42.0.1
-    interface_name = wlan0
-    username = root
-    password = 
-    interface_type = MM_HALOW
+device_name = ubiquiti_rover
+    ip = 192.168.1.25
+    username = rover
+    password = makemorerobot
+    interface_type = AIROS
+
+device_name = ubiquiti_gs
+    ip = 192.168.1.20
+    username = rover
+    password = makemorerobot
+    interface_type = AIROS
