Added support for new GPS topics

--- a/software/ros_packages/comms_control/comms_control/comms_monitor.cfg
+++ b/software/ros_packages/comms_control/comms_control/comms_monitor.cfg
@@ -1,9 +1,16 @@
 logging_period = 5.0
 logging_enabled = true
-logging_path = ./comms_logs/
+logging_path = /home/nolan/comms_logs/
 
 device_name = ubiquiti_gs
     ip = 192.168.1.20
     username = rover
     password = makemorerobot
     interface_type = AIROS
+
+device_name = ubiqiti_rover_from_gs
+    ip = 192.168.1.25
+    username = rover
+    password = makemorerobot
+    interface_type = AIROS
+    
